--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="imagenes/g.png">
+    <link rel="stylesheet" href="css/animate.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Gamma Distribuciones</title>
@@ -131,7 +132,7 @@
     <section class="section-1-index">
         <!-- Empieza seccion de productos destacados (Esta seccion esta en la pagina principal, pero si pones ver mas ahi te redirige a la otra pagina) -->
         <h2 class="section-1-index__text">Productos Destacados</h2>
-        <article class="section-1-index__article-1 row">
+        <article class="section-1-index__article-1 row wow fadeInUp">
             <figure class="section-1-index__article-1--figure col-8 col-lg-3">
                 <img class="section-1-index__article-1--figure--img" src="imagenes/tornillo.png" alt="foto de tornillo 1">
                 <figcaption class="section-1-index__article-1--figure--figcap">Producto 1</figcaption>   
@@ -250,6 +251,10 @@
 <!-- FOOTER = END -->
 <!-- SCRIPTS = START -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 <!-- SCRIPTS = END -->
 </body>
 </html>
