--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <section class="section-1-index">
         <!-- Empieza seccion de productos destacados (Esta seccion esta en la pagina principal, pero si pones ver mas ahi te redirige a la otra pagina) -->
         <h2 class="section-1-index__text">Productos Destacados</h2>
-        <article class="section-1-index__article-1 row wow fadeInUp">
+        <article class="section-1-index__article-1">
             <figure class="section-1-index__article-1--figure col-8 col-lg-3">
                 <img class="section-1-index__article-1--figure--img" src="imagenes/tornillo.png" alt="foto de tornillo 1">
                 <figcaption class="section-1-index__article-1--figure--figcap">Producto 1</figcaption>   
@@ -251,10 +251,6 @@
 <!-- FOOTER = END -->
 <!-- SCRIPTS = START -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    <script src="js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 <!-- SCRIPTS = END -->
 </body>
 </html>
