Arreglo font-sizes de las pags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Gamma Distribuciones</title>
+    <title>Inicio - Gamma Distribuciones</title>
 </head>
 <body>
     <div id="inicio"></div>
@@ -58,7 +58,7 @@
                                 <path d="m11.42 2 3.428 6-3.428 6H4.58L1.152 8 4.58 2h6.84zM4.58 1a1 1 0 0 0-.868.504l-3.428 6a1 1 0 0 0 0 .992l3.428 6A1 1 0 0 0 4.58 15h6.84a1 1 0 0 0 .868-.504l3.429-6a1 1 0 0 0 0-.992l-3.429-6A1 1 0 0 0 11.42 1H4.58z"/>
                                 <path d="M6.848 5.933a2.5 2.5 0 1 0 2.5 4.33 2.5 2.5 0 0 0-2.5-4.33zm-1.78 3.915a3.5 3.5 0 1 1 6.061-3.5 3.5 3.5 0 0 1-6.062 3.5z"/>
                             </svg>
-                            <h4 class="nav__ul--li--subpages">Productos</h4>
+                            <h3 class="nav__ul--li--subpages">Productos</h3>
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="NovedadesItem">
@@ -66,7 +66,7 @@
                             <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                                 <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"/>
                             </svg>
-                            <h4 class="nav__ul--li--subpages">Novedades</h4>
+                            <h3 class="nav__ul--li--subpages">Novedades</h3>
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="CarritoItem">
@@ -74,7 +74,7 @@
                             <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                             </svg>
-                            <h4 class="nav__ul--li--subpages">Tu Carrito</h4>
+                            <h3 class="nav__ul--li--subpages">Tu Carrito</h3>
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="BusquedaNav">
@@ -155,7 +155,7 @@
     <div id="footer-nav"></div>
     <footer class="footer">
         <div class="footer__main-text">
-            <h3 class="text-center text-lg-start mb-0">CONTACTANOS</h3>
+            <h2 class="text-center text-lg-start mb-0">CONTACTANOS</h2>
         </div>
         <div class="footer__content container-fluid row">
             <!-- FOOTER-items = START -->
@@ -165,34 +165,34 @@
                         <svg class="bi bi-telephone" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                             <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                         </svg>
-                        <h5 class="m-0">+54 11 4605-4305</h5>
+                        <h4 class="m-0">+54 11 4605-4305</h4>
                     </li>
                     <li class="footer__content--contact-items--ul--li">
                         <svg class="bi bi-envelope" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                         </svg>
-                        <h5 class="m-0">ventas@gammadistribuciones.com.ar</h5>
+                        <h4 class="m-0">ventas@gammadistribuciones.com.ar</h4>
                     </li>
                     <li class="footer__content--contact-items--ul--li">
                         <svg class="bi bi-phone" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                             <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
                             <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                         </svg>
-                        <h5 class="m-0">+54 9 11 5922-3218</h5>
+                        <h4 class="m-0">+54 9 11 5922-3218</h4>
                     </li>
                     <li class="footer__content--contact-items--ul--li">
                         <svg class="bi bi-clock" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
                             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
                         </svg>
-                        <h5 class="m-0">De lunes a viernes de 8hs a 16hs</h5>
+                        <h4 class="m-0">De lunes a viernes de 8hs a 16hs</h4>
                     </li> 
                 </ul>
             </div>
             <!-- FOOTER-items = END -->
             <!-- FOOTER-form = START -->
             <div class="footer__form col-12 col-lg-5">
-                <h4>Envianos un mensaje</h4>
+                <h3>Envianos un mensaje</h3>
                 <form class="footer__form--formulario" action="#">
                     <input type="text" placeholder="Nombre y Apellido" required="required">
                     <input type="email" placeholder="Correo electronico" required="required">
@@ -244,7 +244,7 @@
         </div>
         <!-- FOOTER-desc = START -->
         <div class="footer__desc">
-            <h6>©2023, Marco Leskovar, Todos los derechos reservados</h6>
+            <h5>©2023, Marco Leskovar, Todos los derechos reservados</h5>
         </div>
         <!-- FOOTER-desc = END -->
     </footer>
