info verdadera y SEO

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta name="description" content="Distribuidora mayorista con más de 20 años de experiencia donde encontrarás los mejores precios de productos para construcción, tornillos autoperforantes y bulones">
+    <meta name="author" content="Marco Leskovar">
+    <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
+    <meta name="copyright" content="Gamma Distribuciones"/>
+    <meta name="robots" content="index, follow"/>
     <title>Inicio - Gamma Distribuciones</title>
 </head>
 <body>
@@ -45,7 +50,7 @@
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="imagenes/profile-icon-full.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="imagenes/profile-icon-full.png" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -132,18 +137,18 @@
     <section class="section-1-index">
         <!-- Empieza seccion de productos destacados (Esta seccion esta en la pagina principal, pero si pones ver mas ahi te redirige a la otra pagina) -->
         <h2 class="section-1-index__text">Productos Destacados</h2>
-        <article class="section-1-index__article-1">
-            <figure class="section-1-index__article-1--figure col-8 col-lg-3">
-                <img class="section-1-index__article-1--figure--img" src="imagenes/tornillo.png" alt="foto de tornillo 1">
-                <figcaption class="section-1-index__article-1--figure--figcap">Producto 1</figcaption>   
+        <article class="section-1-index__article-1 col-lg-12">
+            <figure class="section-1-index__article-1--figure col-8 col-sm-7 col-md-4 col-lg-3">
+                <img class="section-1-index__article-1--figure--img" src="imagenes/t2-aguja-6x1.webp" alt="Producto destacado 1">
+                <figcaption class="section-1-index__article-1--figure--figcap">T2 Aguja 6x1</figcaption>   
             </figure>
-            <figure class="section-1-index__article-1--figure col-8 col-lg-3">
-                <img class="section-1-index__article-1--figure--img" src="imagenes/tornillo.png" alt="foto de tornillo 2">
-                <figcaption class="section-1-index__article-1--figure--figcap">Producto 2</figcaption>
+            <figure class="section-1-index__article-1--figure col-8 col-sm-7 col-md-4 col-lg-3">
+                <img class="section-1-index__article-1--figure--img" src="imagenes/t1-mecha-8x12.webp" alt="Producto Destacado 2">
+                <figcaption class="section-1-index__article-1--figure--figcap">T1 Mecha 8x1/2</figcaption>
             </figure>
-            <figure class="section-1-index__article-1--figure col-8 col-lg-3">
-                <img class="section-1-index__article-1--figure--img" src="imagenes/tornillo.png" alt="foto de tornillo 3">
-                <figcaption class="section-1-index__article-1--figure--figcap">Producto 3</figcaption>
+            <figure class="section-1-index__article-1--figure col-8 col-sm-7 col-md-4 col-lg-3">
+                <img class="section-1-index__article-1--figure--img" src="imagenes/hex-t2-14x2.webp" alt="Producto Destacado 3">
+                <figcaption class="section-1-index__article-1--figure--figcap">Hex T2 14x2</figcaption>
             </figure>
         </article>
         <div class="mt-lg-0">
