conexion con pag 404

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- HEADER-logo = END -->
             <!-- HEADER-sup = START -->
             <div class="header__first--nav-sup col-6 m-auto">
-                <a class="nav-link hover" aria-current="page" href="#">
+                <a class="nav-link hover" aria-current="page" href="views/404/404.html">
                     <svg class="header__first--nav-sup--lupa-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg>
@@ -47,7 +47,7 @@
             <!-- NAV-items = START -->
                 <!-- NAV-login = START -->
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
-                    <a class="nav__log--login" href="#">
+                    <a class="nav__log--login" href="views/404/404.html">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="imagenes/profile-icon.png" alt="logo de usuario">
                             <img class="nav__log--login--button--img1--2" src="imagenes/profile-icon-full.png" alt="logo de usuario 2">
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="BusquedaNav">
-                        <a class="nav-link hover" aria-current="page" href="#">
+                        <a class="nav-link hover" aria-current="page" href="views/404/404.html">
                             <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                             </svg>
