--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- HEADER-logo = END -->
             <!-- HEADER-sup = START -->
             <div class="header__first--nav-sup col-6 m-auto">
-                <button class="header__first--nav-sup--lupa navbar-toggler outline-none p-0 border-0" id="lupaButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="header__first--nav-sup--lupa  bi bi-list navbar-toggler outline-none p-0 border-0" id="lupaButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"">
                     <svg class="header__first--nav-sup--lupa--1" id="lupaOpen" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg>
@@ -114,31 +114,36 @@
             <!-- BUSCAR = START -->
             <nav class="nav-2 collapse navbar-collapse col-12 col-lg-4" id="navbarNav1">
                 <!-- BUSCAR-buscador = START -->
-                <form class="nav-2__form">
-                    <input class="nav-2__form--input" type="search" placeholder="Buscar" action="#">
+                <form class="nav-2__form m-0">
+                    <span class="nav-2__form--lupa">
+                        <svg class="nav-2__form--lupa--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+                        </svg>
+                    </span>
+                    <input class="nav-2__form--input" type="text" placeholder="Buscar" action="#">
                 </form>
                 <!-- BUSCAR-buscador = END -->
                 <!-- BUSCAR-destacados = START -->
                 <h3 class="nav-2__h3">Mas buscados</h3>
                 <ul class="nav-2__ul navbar-nav col-12 col-lg-8">
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
-                            <h4 class="nav-2__ul--li--a--h4">Productos</h4>
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#sextoProducto">
+                            <h4 class="nav-2__ul--li--a--h4">T1 Aguja 8x9/16</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
-                            <h4 class="nav-2__ul--li--a--h4">Productos</h4>
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#cuartoProducto">
+                            <h4 class="nav-2__ul--li--a--h4">Fix 5x45</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
-                            <h4 class="nav-2__ul--li--a--h4">Productos</h4>
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#segundoProducto">
+                            <h4 class="nav-2__ul--li--a--h4">T1 Mecha 8x1/2</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
-                            <h4 class="nav-2__ul--li--a--h4">Productos</h4>
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#tercerProducto">
+                            <h4 class="nav-2__ul--li--a--h4">Hex T2 14x2</h4>
                         </a>
                     </li>
                 </ul>
