--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
                 <h3 class="nav-2__h3">Mas buscados</h3>
                 <ul class="nav-2__ul navbar-nav col-12 col-lg-8">
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#sextoProducto">
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
                             <h4 class="nav-2__ul--li--a--h4">T1 Aguja 8x9/16</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#cuartoProducto">
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
                             <h4 class="nav-2__ul--li--a--h4">Fix 5x45</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#segundoProducto">
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
                             <h4 class="nav-2__ul--li--a--h4">T1 Mecha 8x1/2</h4>
                         </a>
                     </li>
                     <li class="nav-2__ul--li nav-item container-fluid p-0" id="ProductosItem">
-                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html#tercerProducto">
+                        <a class="nav-2__ul--li--a hover" aria-current="page" href="views/productos/productos.html">
                             <h4 class="nav-2__ul--li--a--h4">Hex T2 14x2</h4>
                         </a>
                     </li>
