agregamos nuevo header con buscador y scripts en todas las paginas y detalles

--- a/index.html
+++ b/index.html
@@ -305,42 +305,7 @@
 <script>
 new WOW().init();
 </script>
-<script>
-const listOpenBtn = document.querySelector('#listOpen');
-const listCloseBtn = document.querySelector('#listClose');
-const lupaOpenBtn = document.querySelector('#lupaOpen');
-const lupaCloseBtn = document.querySelector('#lupaClose');
-const listBtn = document.querySelector('#listButton');
-const lupaBtn = document.querySelector('#lupaButton');
-
-listOpenBtn.addEventListener('click', () => {
-listCloseBtn.style.display = 'flex';
-listOpenBtn.style.display = 'none';
-lupaOpenBtn.style.display = 'none';
-lupaBtn.style.opacity = '1';
-});
-
-listCloseBtn.addEventListener('click', () => {
-listCloseBtn.style.display = 'none';
-listOpenBtn.style.display = 'flex';
-lupaOpenBtn.style.display = 'flex';
-lupaBtn.style.opacity = '1';
-});
-
-lupaOpenBtn.addEventListener('click', () => {
-lupaCloseBtn.style.display = 'flex';
-lupaOpenBtn.style.display = 'none';
-listOpenBtn.style.display = 'none';
-listBtn.style.opacity = '0.5';
-});
-
-lupaCloseBtn.addEventListener('click', () => {
-lupaCloseBtn.style.display = 'none';
-lupaOpenBtn.style.display = 'flex';
-listOpenBtn.style.display = 'flex';
-listBtn.style.opacity = '1';
-});
-</script>
+<script src="js/buscador.js"></script>
 <!-- SCRIPTS = END -->
 </body>
 </html>
