--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
             <div class="footer__form col-12 col-lg-5">
                 <h3>Envianos un mensaje</h3>
                 <form class="footer__form--formulario" action="#">
-                    <input type="text" placeholder="Nombre y Apellido" required="required">
-                    <input type="email" placeholder="Correo electronico" required="required">
-                    <textarea placeholder="Escribi tu mensaje" required="required"></textarea>
-                    <input type="submit" value="Enviar">
+                    <input class="footer__form--formulario--input" type="text" placeholder="Nombre y Apellido" required="required">
+                    <input class="footer__form--formulario--input" type="email" placeholder="Correo electronico" required="required">
+                    <textarea class="footer__form--formulario--input textarea" placeholder="Escribi tu mensaje" required="required"></textarea>
+                    <input class="footer__form--formulario--input submit" type="submit" value="Enviar">
                 </form>
             </div>
             <!-- FOOTER-form = END -->
