--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </nav>
             <!-- NAV = END  -->
             <!-- BUSCAR = START -->
-            <nav class="nav-2 collapse navbar-collapse col-12 col-lg-4" id="navbarNav1">
+            <nav class="nav-2 collapse col-12 col-lg-4" id="navbarNav1">
                 <!-- BUSCAR-buscador = START -->
                 <form class="nav-2__form m-0">
                     <span class="nav-2__form--lupa">
