--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <!-- HEADER-logo = START -->
             <div class="header__first--logo col-6 col-lg-5 me-auto">
                 <a class="navbar-brand m-0 p-0" href="#inicio">
-                    <img class="header__first--logo--mini" src="imagenes/gborde.png" alt="logo chico">
-                    <img class="header__first--logo--full" src="imagenes/full_logo.png" alt="logo grande">
+                    <img class="header__first--logo--mini" src="imagenes/gborde.webp" alt="logo chico">
+                    <img class="header__first--logo--full" src="imagenes/full_logo.webp" alt="logo grande">
                 </a>
             </div>
             <!-- HEADER-logo = END -->
@@ -55,8 +55,8 @@
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
                     <a class="nav__log--login" href="views/404/404.html">
                         <button class="nav__log--login--button">
-                            <img class="nav__log--login--button--img1" src="imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="imagenes/profile-icon-full.png" alt="logo de usuario 2">
+                            <img class="nav__log--login--button--img1" src="imagenes/profile-icon.webp" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="imagenes/profile-icon-full.webp" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
